--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,122 @@ body {
   height: 10px;
   background: rgba(0, 0, 0, 0.1);
 }
+.roof {
+  position: absolute;
+  top: -100px;
+  height: 100px;
+  width: 100%;
+}
+.roof::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60%;
+  height: 100%;
+  background: #257582;
+  transform: skewX(330deg);
+}
+.roof::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60%;
+  height: 100%;
+  background: #257582;
+  transform: skewX(30deg);
+}
+.front {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 180px;
+  height: 180px;
+  background: #f1f1f1;
+}
+.front::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -64px;
+  width: 126px;
+  height: 126px;
+  background: #f1f1f1;
+  transform: translateX(-50%) rotate(45deg);
+  border-top: 4px solid #222;
+  border-left: 4px solid #222;
+}
+.front::after {
+  content: "";
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 120px;
+  height: 60px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 15px;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border: 4px solid #333;
+}
+.door {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  height: 80px;
+  background: #4d2418;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
+.door::before {
+  content: "";
+  position: absolute;
+  top: 30px;
+  left: -45px;
+  width: 30px;
+  height: 30px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-top: 5px solid #333;
+  border-bottom: 5px solid #333;
+}
+.door::after {
+  content: "";
+  position: absolute;
+  top: 30px;
+  right: -45px;
+  width: 30px;
+  height: 30px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-top: 5px solid #333;
+  border-bottom: 5px solid #333;
+}
