--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,94 @@ body {
   border-top: 5px solid #333;
   border-bottom: 5px solid #333;
 }
+.line {
+  position: absolute;
+  top: 38%;
+  width: 100%;
+  height: 12px;
+  border-top: 4px solid #257582;
+  border-bottom: 4px solid #257582;
+}
+.adjst {
+  top: 45%;
+}
+.windows_right {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  width: 60px;
+  height: 50px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-top: 5px solid #333;
+  border-bottom: 5px solid #333;
+}
+.windows_right::before {
+  content: "";
+  position: absolute;
+  top: 90px;
+
+  width: 50px;
+  height: 60px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-bottom: 5px solid #333;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
+.windows_left {
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  width: 60px;
+  height: 50px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-top: 5px solid #333;
+  border-bottom: 5px solid #333;
+}
+.windows_left::before {
+  content: "";
+  position: absolute;
+  top: 90px;
+
+  width: 50px;
+  height: 60px;
+  background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-bottom: 5px solid #333;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
