--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ body {
   align-items: center;
   min-height: 100vh;
   overflow: hidden;
+  background: #ccc;
 }
 .house {
   position: relative;
   width: 700px;
   height: 350px;
-  background: #ccc;
   border-bottom: 8px solid #175117;
 }
 .main {
@@ -24,7 +24,7 @@ body {
   transform: translateX(-50%);
   width: 400px;
   height: 200px;
-  background: #fff;
+  background: #f9f9f9;
 }
 .main::before {
   content: "";
@@ -244,4 +244,67 @@ body {
   border-bottom: 5px solid #333;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
+}
+.side{
+    position: absolute;
+    bottom: 0;
+    left: -120px;
+    width: 140px;
+    height: 140px;
+    background: #f1f1f1;
+}
+.side::before{
+    content: '';
+    position: absolute;
+    top: -52px;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background: #f1f1f1;
+    transform: translateX(-50%) rotate(45deg);
+    border-top: 4px solid #222;
+    border-left: 4px solid #222;
+}
+.side::after{
+    content: '';
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70px;
+    height: 40px;
+    background: #333;
+    background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
+.side .line{
+transform: translateY(-16px);
+}
+.windows{
+    position: absolute;
+    top: 60px;
+    left: 30px;
+    width: 80px;
+    height: 70px;
+    background: #333;
+  background-image: linear-gradient(
+      to right,
+      transparent 10%,
+      transparent 90%,
+      #333 90%
+    ),
+    linear-gradient(to bottom, transparent 10%, #6d6d7d 10%, #6d6d7d 90%);
+  background-size: 10px 10px;
+  border: 2px solid #333;
+  border-top: 5px solid #333;
+  border-bottom: 5px solid #333;
 }
