--- a/styles.css
+++ b/styles.css
@@ -308,3 +308,30 @@ transform: translateY(-16px);
   border-top: 5px solid #333;
   border-bottom: 5px solid #333;
 }
+.tree{
+    position: absolute;
+    top: -10px;
+    right: -120px;
+    width: 120px;
+    height: 120px;
+    background: #94ab38;
+    border-top-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+    transform: rotate(315deg);
+}
+.tree::before{
+    content: '';
+    position: absolute;
+    top: 85px;
+    left: -20px;
+    width: 10px;
+    height: 100px;
+    background: #3c2703;
+    transform: rotate(45deg);
+}
+.tree2{
+    top: -50px;
+    right: -70px;
+    background: #7b921f;
+    transform: rotate(315deg) scale(1.25);
+}
